Corrigir busca do primeiro e último elemento de uma lista